Fixed: Still Watching label was wrapping around on mobile devices

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -44,6 +44,10 @@
           margin-left: auto !important;
           margin-right: 5% !important;
      }
+
+     .stillWatching {
+          min-width: 110px;
+     }
 }
 
 body {
